| Bug #29097 | fsp_get_available_space_in_free_extents() is capped at 4TB | ||
|---|---|---|---|
| Submitted: | 14 Jun 2007 5:40 | Modified: | 19 Jun 2010 18:04 |
| Reporter: | Domas Mituzas | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.0, 5.1, 32bit | OS: | Any |
| Assigned to: | Vasil Dimov | CPU Architecture: | Any |
[15 Jun 2007 16:15]
Heikki Tuuri
Assigning this to Vasil.
[25 Jul 2007 1:36]
Timothy Smith
Queued to 5.1-maint
[2 Aug 2007 19:12]
Bugs System
Pushed into 5.1.21-beta
[3 Aug 2007 1:58]
Paul DuBois
Noted in 5.1.21 changelog. A maximum of 4TB InnoDB free space was reported by SHOW TABLE STATUS, which is incorrect on systems with more than 4TB space.
[16 Aug 2007 0:56]
Timothy Smith
Queued to 5.0-maint
[20 Aug 2007 10:05]
Bugs System
Pushed into 5.0.48
[20 Aug 2007 10:20]
Bugs System
Pushed into 5.1.22-beta
[25 Aug 2007 14:30]
Paul DuBois
Noted in 5.0.48 changelog.
[5 May 2010 15:15]
Bugs System
Pushed into 5.1.47 (revid:joro@sun.com-20100505145753-ivlt4hclbrjy8eye) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[6 May 2010 2:58]
Paul DuBois
Push resulted from incorporation of InnoDB tree. No changes pertinent to this bug. Re-closing.
[28 May 2010 6:12]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (pib:16)
[28 May 2010 6:40]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[28 May 2010 7:08]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[29 May 2010 22:48]
Paul DuBois
Push resulted from incorporation of InnoDB tree. No changes pertinent to this bug. Re-closing.
[17 Jun 2010 12:17]
Bugs System
Pushed into 5.1.47-ndb-7.0.16 (revid:martin.skold@mysql.com-20100617114014-bva0dy24yyd67697) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:05]
Bugs System
Pushed into 5.1.47-ndb-6.2.19 (revid:martin.skold@mysql.com-20100617115448-idrbic6gbki37h1c) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)
[17 Jun 2010 13:45]
Bugs System
Pushed into 5.1.47-ndb-6.3.35 (revid:martin.skold@mysql.com-20100617114611-61aqbb52j752y116) (version source revid:vasil.dimov@oracle.com-20100331130613-8ja7n0vh36a80457) (merge vers: 5.1.46) (pib:16)

Description: fsp_get_available_space_in_free_extents(), used for InnoDB free space report, is ulint, hence the output capped at 4TB. At systems with more free space in tablespaces that produces wrong reports. fprintf(srv_dict_tmpfile, "InnoDB free: %lu kB", (ulong) fsp_get_available_space_in_free_extents( prebuilt->table->space)); How to repeat: 'SHOW TABLE STATUS' Suggested fix: use real values!